--- a/rhoso-intro/1/ch3-multitenancy/s6-review-quiz.html
+++ b/rhoso-intro/1/ch3-multitenancy/s6-review-quiz.html
@@ -259,18 +259,6 @@
 </dd>
 </dl>
 </div>
-<div class="admonitionblock warning">
-<table>
-<tr>
-<td class="icon">
-<i class="fa icon-warning" title="Warning"></i>
-</td>
-<td class="content">
-Pending Review.
-</td>
-</tr>
-</table>
-</div>
 </div>
 </div>
 <div class="sect1">
@@ -279,29 +267,29 @@ Pending Review.
 <div class="olist arabic">
 <ol class="arabic">
 <li>
-<p>An OpenStack Administrator needs to support, on the same cluster, two business units which used to be independent companies, before a merger, and must continue using each of their legacy enterprise authentication system and each have their own team of OpenStack Operators. How can OpenStack support this requirement?</p>
+<p>An OpenStack Administrator needs to support, on the same cluster, two business units that used to be independent companies, before a merger, and must continue using each of their legacy enterprise authentication systems and each have their own team of OpenStack Operators. How can OpenStack support this requirement?</p>
 <div class="ulist checklist">
 <ul class="checklist">
 <li>
-<p><i class="fa fa-square-o"></i> Each business unit requires their own domain.</p>
+<p><i class="fa fa-square-o"></i> Each business unit requires its own domain.</p>
 </li>
 <li>
-<p><i class="fa fa-square-o"></i> Each business unit requires their own projects.</p>
+<p><i class="fa fa-square-o"></i> Each business unit requires its own projects.</p>
 </li>
 <li>
-<p><i class="fa fa-square-o"></i> Each business unit requires their own cluster.</p>
+<p><i class="fa fa-square-o"></i> Each business unit requires its own cluster.</p>
 </li>
 <li>
-<p><i class="fa fa-square-o"></i> Each business unit requires their own region.</p>
+<p><i class="fa fa-square-o"></i> Each business unit requires its own region.</p>
 </li>
 <li>
-<p><i class="fa fa-square-o"></i> Each business unit requires their own AZ.</p>
+<p><i class="fa fa-square-o"></i> Each business unit requires its own AZ.</p>
 </li>
 <li>
-<p><i class="fa fa-square-o"></i> Each business unit requires their own host aggregate.</p>
+<p><i class="fa fa-square-o"></i> Each business unit requires its own host aggregate.</p>
 </li>
 <li>
-<p><i class="fa fa-square-o"></i> Each business unit requires their own cell.</p>
+<p><i class="fa fa-square-o"></i> Each business unit requires its own cell.</p>
 </li>
 </ul>
 </div>
@@ -335,7 +323,7 @@ Pending Review.
 </div>
 </li>
 <li>
-<p>An OpenStack Operator has the member role in a project and found that the team of developers working on that project is very knowleadgeable about OpenStack and wishes to allow the team more authonomy managing API resources for their application. Can that operator grant those developers permission to manage API resources on their project?</p>
+<p>An OpenStack Operator has the member role in a project and found that the team of developers working on that project is very knowledgeable about OpenStack and wishes to allow the team more autonomy managing API resources for their application. Can that operator grant those developers permission to manage API resources on their project?</p>
 <div class="ulist checklist">
 <ul class="checklist">
 <li>
@@ -361,7 +349,7 @@ Pending Review.
 </div>
 </li>
 <li>
-<p>An OpenStack Administrator created two host aggregates: one for physical machines with GPUs and another for physical machines with very large memory. Some machines have both GPUs and very large memory, should the administrator create a third host aggregate for those machines?</p>
+<p>An OpenStack Administrator created two host aggregates: one for physical machines with GPUs and another for physical machines with large memory. Some machines have both GPUs and large memory, should the administrator create a third host aggregate for those machines?</p>
 <div class="ulist checklist">
 <ul class="checklist">
 <li>
