--- a/rhoso-intro/1/ch3-multitenancy/index.html
+++ b/rhoso-intro/1/ch3-multitenancy/index.html
@@ -255,25 +255,13 @@
 </dd>
 </dl>
 </div>
-<div class="admonitionblock warning">
-<table>
-<tr>
-<td class="icon">
-<i class="fa icon-warning" title="Warning"></i>
-</td>
-<td class="content">
-Work in Progress
-</td>
-</tr>
-</table>
-</div>
 </div>
 </div>
 <div class="sect1">
 <h2 id="_introduction"><a class="anchor" href="#_introduction"></a>Introduction</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>This is the final chapter of the Introduction to OpenStack course and introduces the features that enable large OpenStack clusters, with teams of Administrators and Operators, hosting multiple workloads, and potentially requiring heterogeneous compute nodes or just large control planes.</p>
+<p>This is the final chapter of the Introduction to OpenStack course and introduces the features that enable large OpenStack clusters, with teams of Administrators and Operators, to host multiple workloads, and potentially require heterogeneous compute nodes or just large control planes.</p>
 </div>
 <div class="paragraph">
 <p>This chapter also introduces the features that enable OpenStack Administrators to protect clusters from applications and OpenStack Operators, and also enable OpenStack Operators and applications to be insulated from each other.</p>
