--- a/rhoso-intro/1/ch3-multitenancy/s1-domains-projects-lecture.html
+++ b/rhoso-intro/1/ch3-multitenancy/s1-domains-projects-lecture.html
@@ -259,18 +259,6 @@
 </dd>
 </dl>
 </div>
-<div class="admonitionblock warning">
-<table>
-<tr>
-<td class="icon">
-<i class="fa icon-warning" title="Warning"></i>
-</td>
-<td class="content">
-Pending Review.
-</td>
-</tr>
-</table>
-</div>
 </div>
 </div>
 <div class="sect1">
@@ -285,7 +273,7 @@ Pending Review.
 </div>
 </div>
 <div class="paragraph">
-<p>On the structure of domains and projects, OpenStack services enforce authorization checks, which may allow or deny a user to manage API respources, enabling separation of concerns, for example: an Operator may manage applications from some projects but not from others.</p>
+<p>On the structure of domains and projects, OpenStack services enforce authorization checks, which may allow or deny a user to manage API resources, enabling separation of concerns, for example: an Operator may manage applications from some projects but not from others.</p>
 </div>
 <div class="paragraph">
 <p>The structure of domains and projects also enable OpenStack services to enforce API resource and compute resource quotas, which prevents a single application to take up all compute capacity of a cluster or of a compute node.</p>
@@ -347,18 +335,18 @@ Pending Review.
 <p>In the previous chapter, we learned that Keystone authenticates the identity of a user, but Keystone itself makes no authorization decisions: these belong to individual OpenStack services.</p>
 </div>
 <div class="paragraph">
-<p>Keystone does populate access tokens with data, such as originating domain and project of a user, and the list of groups and roles a user is member of. OpenStack services can use any of that information to make authentication decisions, and they are expected to follow a few conventions, among them:</p>
+<p>Keystone does populate access tokens with data, such as the originating domain and project of a user, and the list of groups and roles a user is a member of. OpenStack services can use any of that information to make authentication decisions, and they are expected to follow a few conventions, among them:</p>
 </div>
 <div class="ulist">
 <ul>
 <li>
-<p>Users defined at a scope (system, project, or domain) or which got permissions because of groups and roles defined at a scope, can only access resources from the same scope or from lower scopes.</p>
+<p>Users defined at a scope (system, project, or domain) or who got permissions because of groups and roles defined at a scope, can only access resources from the same scope or from lower scopes.</p>
 </li>
 <li>
 <p>Users with the <strong>admin</strong> role can perform any operation with any resource, respecting scope restrictions.</p>
 </li>
 <li>
-<p>Users with the <strong>member</strong> role can perform a restricted set of operatations which create, change, or delete resources.</p>
+<p>Users with the <strong>member</strong> role can perform a restricted set of operations which create, change, or delete resources.</p>
 </li>
 <li>
 <p>Users with the <strong>reader</strong> role can only list resources and query attributes of those resources, but cannot make any change nor delete resources.</p>
@@ -381,7 +369,7 @@ Remember that users do <strong>not</strong> own OpenStack API resources. Servers
 </table>
 </div>
 <div class="paragraph">
-<p>The admin, member, and reader roles exist by convention. It is up to individual OpenStack services to assign specifc meaning to each of those roles, that is: which APIs they can invoke and using which parameters. For some services, the distinction between admin and member might make no sense and those roles would be equivalent. For other services, the reader role may not be able to view sensitive attributes of a resource instance.</p>
+<p>The admin, member, and reader roles exist by convention. It is up to individual OpenStack services to assign specific meaning to each of those roles, that is: which APIs they can invoke and using which parameters. For some services, the distinction between admin and member might make no sense and those roles would be equivalent. For other services, the reader role may not be able to view sensitive attributes of a resource instance.</p>
 </div>
 <div class="paragraph">
 <p>It is possible, but uncommon, to create custom roles in OpenStack clusters. The reason being that you cannot define the permissions (or rules) for custom roles using OpenStack APIs. You would have to manage services directly on the control plane to provide them with policy files. Most organizations stay within the three standard roles.</p>
@@ -402,7 +390,7 @@ Remember that users do <strong>not</strong> own OpenStack API resources. Servers
 <p>Traditional data centers may be used to the LDAP technology, used by identity management systems like Microsoft Active Directory (MSAD) and Red Hat Enterprise Linux Identity Management (RHEL IdM) but this technology is losing ground for identity management systems compatible with OpenID Connect (OIDC), which are based on the OAuth standard.</p>
 </div>
 <div class="paragraph">
-<p>Nowadays, it is advisable to prefer OIDC identity systems over LDAP systems, especially for sharing authentication backends with modern cloud-native and containerized IT infrastructure applications, such as CI/CD systems. Some organizations stick with LDAP systems because most operating systems cannot authenticate local users using OIDC, but most of the times there is no reason to make OpenStack compute nodes members of your MSAD or RHEL IdM authetication domain.</p>
+<p>Nowadays, it is advisable to prefer OIDC identity systems over LDAP systems, especially for sharing authentication backends with modern cloud-native and containerized IT infrastructure applications, such as CI/CD systems. Some organizations stick with LDAP systems because most operating systems cannot authenticate local users using OIDC, but most of the time there is no reason to make OpenStack compute nodes members of your MSAD or RHEL IdM authentication domain.</p>
 </div>
 </div>
 <div class="sect2">
@@ -411,7 +399,7 @@ Remember that users do <strong>not</strong> own OpenStack API resources. Servers
 <p>Keystone and some other OpenStack services recognize the system scope meaning an entire cluster. OpenStack APIs which operate at the system scope, outside of any domain and project, are very rare, but granting a user or group with the admin role at the system scope is an effective way of making them superusers for the totality of a cluster.</p>
 </div>
 <div class="paragraph">
-<p>For some services there may be a special project and/or a special domain, prepopulared with shared resources, and with admin or member restricted to only few users, plus reader assigned by default to all users. This looks like system scope but it is only a domain and project reserved for OpenStack Administrators to share reosurces with other users and projects. Organizations can use a similar approach for avoiding duplicating resources on multiple projects and domains.</p>
+<p>For some services there may be a special project and/or a special domain, prepopulated with shared resources, and with admin or member restricted to only a few users, plus readers assigned by default to all users. This looks like system scope but it is only a domain and project reserved for OpenStack Administrators to share resources with other users and projects. Organizations can use a similar approach for avoiding duplicating resources on multiple projects and domains.</p>
 </div>
 </div>
 </div>
@@ -429,7 +417,7 @@ Remember that users do <strong>not</strong> own OpenStack API resources. Servers
 <i class="fa icon-tip" title="Tip"></i>
 </td>
 <td class="content">
-OpenStack Nova used to provide per-user quotas but they are deprecated and are not available aymore from the OpenStack client and other up-to-date OpenStack management tools.
+OpenStack Nova used to provide per-user quotas but they are deprecated and are not available anymore from the OpenStack client and other up-to-date OpenStack management tools.
 </td>
 </tr>
 </table>
@@ -443,15 +431,15 @@ OpenStack Nova used to provide per-user quotas but they are deprecated and are n
 <p>Compute resource quotas can only prevent the creation or changes to API resource instances. They are not designed to enforce dynamic usage quotas, but to ensure applications get some guaranteed capacity and that compute nodes are not overloaded with more server instances they can handle.</p>
 </div>
 <div class="paragraph">
-<p>To understand that, assume that a project has a quota of only 10 vCPUs. If that project already has three server instances, which add up to 8 vCPUs, it is only possible to create two new server instances, each one using one vCPU, or one instance using two vCPUs. It doesn&#8217;t matter if the existing instances are mostly iddle and the cluster has plenty if capacity for running more virtual machines.</p>
+<p>To understand that, assume that a project has a quota of only 10 vCPUs. If that project already has three server instances, which add up to 8 vCPUs, it is only possible to create two new server instances, each one using one vCPU, or one instance using two vCPUs. It doesn&#8217;t matter if the existing instances are mostly idle and the cluster has plenty of capacity for running more virtual machines.</p>
 </div>
 <div class="sect2">
 <h3 id="_api_resource_quotas_and_compute_resource_quotas"><a class="anchor" href="#_api_resource_quotas_and_compute_resource_quotas"></a>API Resource Quotas and Compute Resource Quotas</h3>
 <div class="paragraph">
-<p>API resource quotas affect the number of instances you can create, of a given API resource type, inside a project. That class of quota limts the number of server instances, floating ips, virtual networks, volumes, and so on.</p>
+<p>API resource quotas affect the number of instances you can create, of a given API resource type, inside a project. That class of quota limits the number of server instances, floating ips, virtual networks, volumes, and so on.</p>
 </div>
 <div class="paragraph">
-<p>Compute resource quotas affect the quantity, or capacity, of a compute resource that a project can consume, aggregating the consuption from all server instances in the project. That class of quota limits total quantity of vCPUs, total memory aggregated from all server instances, total disk space from all volumes, and so on.</p>
+<p>Compute resource quotas affect the quantity, or capacity, of a compute resource that a project can consume, aggregating the consumption from all server instances in the project. That class of quota limits the total quantity of vCPUs, total memory aggregated from all server instances, total disk space from all volumes, and so on.</p>
 </div>
 <div class="admonitionblock note">
 <table>
@@ -460,7 +448,7 @@ OpenStack Nova used to provide per-user quotas but they are deprecated and are n
 <i class="fa icon-note" title="Note"></i>
 </td>
 <td class="content">
-Here "compute" means anything required to running applications, and could include storage and network capacity. It does not reffer to API resources from Nova, the Compute service.
+Here "compute" means anything required to run applications, and could include storage and network capacity. It does not refer to API resources from Nova, the Compute service.
 </td>
 </tr>
 </table>
@@ -481,7 +469,7 @@ Here "compute" means anything required to running applications, and could includ
 <div class="sect2">
 <h3 id="_compute_resource_overcommit"><a class="anchor" href="#_compute_resource_overcommit"></a>Compute Resource Overcommit</h3>
 <div class="paragraph">
-<p>Because most applications are bursty, meaning their actual usage of compute resource vary over time, and most times it happens during short periods of time, alternating with other short periods of iddleness, OpenStack enables overcommit of compute resources by default.</p>
+<p>Because most applications are bursty, meaning their actual usage of compute resources vary over time, and most times it happens during short periods of time, alternating with other short periods of idleness, OpenStack enables overcommit of compute resources by default.</p>
 </div>
 <div class="paragraph">
 <p>An OpenStack Administrator can configure different overcommit levels for different classes of compute nodes, but the idea is that, if a compute node has an overcommit factor of 2.0 and 16 cores, it can run server instances adding up to 32 vCPUs.</p>
