--- a/rhoso-intro/1/ch3-multitenancy/s2-multitenancy-quiz.html
+++ b/rhoso-intro/1/ch3-multitenancy/s2-multitenancy-quiz.html
@@ -259,18 +259,6 @@
 </dd>
 </dl>
 </div>
-<div class="admonitionblock warning">
-<table>
-<tr>
-<td class="icon">
-<i class="fa icon-warning" title="Warning"></i>
-</td>
-<td class="content">
-Pending Review.
-</td>
-</tr>
-</table>
-</div>
 </div>
 </div>
 <div class="sect1">
@@ -279,7 +267,7 @@ Pending Review.
 <div class="olist arabic">
 <ol class="arabic">
 <li>
-<p>An OpenStack Administator needs to give a junior OpenStack Operator access to manage API resources from a single application. That operator will work closely with the application&#8217;s development team and should not use too much compute capacity to avoid impact on other application teams sharing the cluster. Which of the following is the minimum access level the administrator should grant to that operator?</p>
+<p>An OpenStack Administrator needs to give a junior OpenStack Operator access to manage API resources from a single application. That operator will work closely with the application&#8217;s development team and should not use too much compute capacity to avoid impact on other application teams sharing the cluster. Which of the following is the minimum access level the administrator should grant to that operator?</p>
 <div class="ulist checklist">
 <ul class="checklist">
 <li>
@@ -304,7 +292,7 @@ Pending Review.
 </div>
 </li>
 <li>
-<p>An OpenStack Administator wants to delegate administration of a group of applications, that belong to the same business unit, to a senior OpenStack Operator. That senior operator will be responsible for a team of junior OpenStack operators dedicated to supporting that business unit and should have autonomy to manage his operators team. Which of the following is the minimum access level the administrator should grant to that operator?</p>
+<p>An OpenStack Administrator wants to delegate administration of a group of applications, that belong to the same business unit, to a senior OpenStack Operator. That senior operator will be responsible for a team of junior OpenStack operators dedicated to supporting that business unit and should have autonomy to manage his operators team. Which of the following is the minimum access level the administrator should grant to that operator?</p>
 <div class="ulist checklist">
 <ul class="checklist">
 <li>
@@ -352,7 +340,7 @@ Pending Review.
 <div class="ulist checklist">
 <ul class="checklist">
 <li>
-<p><i class="fa fa-square-o"></i> Create an API resoure quota that limits the number of projects a team can create in the cluster.</p>
+<p><i class="fa fa-square-o"></i> Create an API resource quota that limits the number of projects a team can create in the cluster.</p>
 </li>
 <li>
 <p><i class="fa fa-square-o"></i> Create an API resource quota that limits the number of server instances a team can create in each project.</p>
