--- a/rhoso-intro/1/ch3-multitenancy/s3-regions-azs-cells-lecture.html
+++ b/rhoso-intro/1/ch3-multitenancy/s3-regions-azs-cells-lecture.html
@@ -259,25 +259,13 @@
 </dd>
 </dl>
 </div>
-<div class="admonitionblock warning">
-<table>
-<tr>
-<td class="icon">
-<i class="fa icon-warning" title="Warning"></i>
-</td>
-<td class="content">
-Pending Review.
-</td>
-</tr>
-</table>
-</div>
 </div>
 </div>
 <div class="sect1">
 <h2 id="_logical_and_physical_organization_of_openstack_clusters"><a class="anchor" href="#_logical_and_physical_organization_of_openstack_clusters"></a>Logical and Physical Organization of OpenStack Clusters</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>In the previous section, we introduced how OpenStack enables users to organize their teams and applications using domains and projects. They provide logical groups that address the organizational structure of your teams and applications. At the end of the section, we introduced quotas, which link that logical structure with physical characteristics of your cluster, such as compute capacity.</p>
+<p>In the previous section, we introduced how OpenStack enables users to organize their teams and applications using domains and projects. They provide logical groups that address the organizational structure of your teams and applications. At the end of the section, we introduced quotas, which link that logical structure with the physical characteristics of your cluster, such as compute capacity.</p>
 </div>
 <div class="paragraph">
 <p>OpenStack operators need some understanding of the physical topology of their OpenStack clusters to ensure their applications run in accordance with their performance and reliability requirements. Sometimes applications need special classes of hardware, such as GPUs; sometimes it is about high-availability, ensuring applications stay operational and their end-users do not notice when a compute server fails.</p>
@@ -300,7 +288,7 @@ The figures in this chapter do not list all user-facing OpenStack services just 
 </table>
 </div>
 <div class="paragraph">
-<p>To address those requirements, OpenStack offer many ways of grouping compute capacity. Most of them focus on the compute nodes, and some focus on control plane services:</p>
+<p>To address those requirements, OpenStack offers many ways of grouping compute capacity. Most of them focus on the compute nodes, and some focus on control plane services:</p>
 </div>
 <div class="dlist">
 <dl>
@@ -310,7 +298,7 @@ The figures in this chapter do not list all user-facing OpenStack services just 
 </dd>
 <dt class="hdlist1">Availability Zones (AZs)</dt>
 <dd>
-<p>An availability zone typically represents a failure domain inside an OpenStack cluster. It can be defined by a server rack, an uninterruptive power supply, a network switch, a data center building, or any other physical constraint that creates the possibility of all compute resources in the AZ becoming unavailable at the same time.</p>
+<p>An availability zone typically represents a failure domain inside an OpenStack cluster. It can be defined by a server rack, an uninterrupted power supply, a network switch, a data center building, or any other physical constraint that creates the possibility of all compute resources in the AZ becoming unavailable at the same time.</p>
 </dd>
 <dt class="hdlist1">Host Aggregates</dt>
 <dd>
@@ -342,19 +330,19 @@ The figures in this chapter do not list all user-facing OpenStack services just 
 <div class="sect2">
 <h3 id="_openstack_regions"><a class="anchor" href="#_openstack_regions"></a>OpenStack Regions</h3>
 <div class="paragraph">
-<p>A <a href="https://docs.openstack.org/python-openstackclient/latest/cli/command-objects/region.html">Region</a> is just a set of OpenStack API entry points. You could run as many or as few OpenStack services in each regions as you wish, but the common scenario is just running all services in all regions, except for a few shared services.</p>
+<p>A <a href="https://docs.openstack.org/python-openstackclient/latest/cli/command-objects/region.html">Region</a> is just a set of OpenStack API entry points. You could run as many or as few OpenStack services in each region as you wish, but the common scenario is just running all services in all regions, except for a few shared services.</p>
 </div>
 <div class="paragraph">
 <p>Your region does not need to represent a country nor a large geographical region, like public cloud providers do. It could be a small geographic region like city or even a data center building inside a large campus. It depends on your networking and storage infrastructure, and your need to retain the ability to keep operating a region, as an OpenStack cluster, independently of other regions, in case of disasters such as earthquakes and floods.</p>
 </div>
 <div class="paragraph">
-<p>It is assumed that OpenStack services in the same region work together, for example Nova can create server instances using volumes from Cinder and networks from Neutron on the same region. But services from different regions would not use each other because of network latency and bandwidth constraints. Other IT infrastructure, such as storage, may not work cross-regions or may work under significant performance and reliability constraints.</p>
+<p>It is assumed that OpenStack services in the same region work together, for example Nova can create server instances using volumes from Cinder and networks from Neutron in the same region. But services from different regions would not use each other because of network latency and bandwidth constraints. Other IT infrastructure, such as storage, may not work cross-regions or may work under significant performance and reliability constraints.</p>
 </div>
 <div class="paragraph">
-<p>It is also assumed that OpenStack services in a region are standalone and work without knowledge of services in other regions, except from Keystone. So API resource names inside a region, such as names of server instances and availability zones, can be equal without creating a conflict. But, because all regions are connected to a shared Keystone, they all have the same users, domains, and projects.</p>
+<p>It is also assumed that OpenStack services in a region are standalone and work without knowledge of services in other regions, except Keystone. So API resource names inside a region, such as names of server instances and availability zones, can be equal without creating a conflict. But, because all regions are connected to a shared Keystone, they all have the same users, domains, and projects.</p>
 </div>
 <div class="paragraph">
-<p>One of your regions runs a shared Keysone service that enable authenticating and discovering OpenStack services in all regions, so it effectively looks like a single private cloud. If you use Horizon, there&#8217;s no need to run it in multiple regions. Of course, there needs to be a special disaster recovery proccess or that region and its shared services.</p>
+<p>One of your regions runs a shared Keystone service that enables authenticating and discovering OpenStack services in all regions, so it effectively looks like a single private cloud. If you use Horizon, there&#8217;s no need to run it in multiple regions. Of course, there needs to be a special disaster recovery process for that region and its shared services.</p>
 </div>
 </div>
 <div class="sect2">
@@ -370,7 +358,7 @@ The figures in this chapter do not list all user-facing OpenStack services just 
 </div>
 </div>
 <div class="sect2">
-<h3 id="_adressability_of_regions_and_azs"><a class="anchor" href="#_adressability_of_regions_and_azs"></a>Adressability of Regions and AZs</h3>
+<h3 id="_addressability_of_regions_and_azs"><a class="anchor" href="#_addressability_of_regions_and_azs"></a>Addressability of Regions and AZs</h3>
 <div class="paragraph">
 <p>Many OpenStack API resources include attributes to set the region and AZ they belong to and Operators want to control those attributes, which makes those two attributes of a cluster and of their compute nodes visible to OpenStack Operators.</p>
 </div>
@@ -390,27 +378,27 @@ The figures in this chapter do not list all user-facing OpenStack services just 
 <h2 id="_host_aggregates"><a class="anchor" href="#_host_aggregates"></a>Host Aggregates</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>A <a href="https://docs.openstack.org/nova/latest/admin/aggregates.html">Host Aggregate</a> is a way to group compute nodes based on abitrary attributes, so OpenStack Administrators can create sets of compute nodes based on hardware characteristics and other criteria that impacts the cost and performance of running different classes of workloads on those physical servers.</p>
+<p>A <a href="https://docs.openstack.org/nova/latest/admin/aggregates.html">Host Aggregate</a> is a way to group compute nodes based on arbitrary attributes, so OpenStack Administrators can create sets of compute nodes based on hardware characteristics and other criteria that impacts the cost and performance of running different classes of workloads on those physical servers.</p>
 </div>
 <div class="paragraph">
-<p>Physical machines are not born equal: some are designed to highly multi-threaded applications, while others are designed for I/O intensive applications. Physical machines come not only with different kinds of CPUs, main memory, and caches, but also with different hardware accelerators and possibly multiple I/O buses. Running any application in whatever compute node is available may be inefficient and expensive.</p>
+<p>Physical machines are not born equal: some are designed for highly multi-threaded applications, while others are designed for I/O intensive applications. Physical machines come not only with different kinds of CPUs, main memory, and caches, but also with different hardware accelerators and possibly multiple I/O buses. Running any application in whatever compute node is available may be inefficient and expensive.</p>
 </div>
 <div class="paragraph">
 <p>Most organizations have complex workloads with components that require different classes of physical servers for optimum performance or lower cost. It may be that the simplicity of managing an undifferentiated pool of compute resources is good enough, but it may be that you need to manage a better fit of applications to hardware, and host aggregates enable OpenStack Administrators and Operators to do that.</p>
 </div>
 <div class="paragraph">
-<p>Compute nodes can belong to multiple host aggregates. It is up to the OpenStack administrator to set the attributes which control membership of nodes to different host aggregates. If host aggregate is as an availability zone, then compute nodes cannot belong to other host aggregates also set as availability zones.</p>
+<p>Compute nodes can belong to multiple host aggregates. It is up to the OpenStack administrator to set the attributes which control membership of nodes to different host aggregates. If the host aggregate is as an availability zone, then compute nodes cannot belong to other host aggregates also set as availability zones.</p>
 </div>
 <div class="paragraph">
 <p>Because a host aggregate is tied to a class of physical machines, the same host aggregate can conceptually span multiple regions and AZs. For spanning AZs, remember that an AZ is a host aggregate and compute nodes can belong to multiple aggregates. For spanning regions, you could define the same attributes and assign the same names to aggregates in different regions for a consistent private cloud.</p>
 </div>
 <div class="paragraph">
-<p>You don&#8217;t need to, but it would be unusual to put all machines of a special kind in a single AZ and lose all of them in case a power supply fails. It is more likely that those machines are spread into different server racks or buildings, thus in multiple AZs, and that you have similar machines in multiple data center, thus in multiple regions.</p>
+<p>You don&#8217;t need to, but it would be unusual to put all machines of a special kind in a single AZ and lose all of them in case a power supply fails. It is more likely that those machines are spread into different server racks or buildings, thus in multiple AZs, and that you have similar machines in multiple data centers, thus in multiple regions.</p>
 </div>
 <div class="sect2">
 <h3 id="_addressability_of_host_aggregates"><a class="anchor" href="#_addressability_of_host_aggregates"></a>Addressability of Host Aggregates</h3>
 <div class="paragraph">
-<p>OpenStack Administrators manage host aggregates and their relationship to API resources. OpenStack Operators use host aggregates, indirectly, to ensure applications get the class of compute node they need or that is best for them. Unlike regions and AZs, to which an OpenStack Operator has direct visibility, in the sense of "create this server instance in region-A and AZ-1", you cannot declare "create this server instance in host-aggregate-A". You must specify an indirect link:</p>
+<p>OpenStack Administrators manage host aggregates and their relationship to API resources. OpenStack Operators use host aggregates, indirectly, to ensure applications get the class of compute nodes they need or that is best for them. Unlike regions and AZs, to which an OpenStack Operator has direct visibility, in the sense of "create this server instance in region-A and AZ-1", you cannot declare "create this server instance in host-aggregate-A". You must specify an indirect link:</p>
 </div>
 <div class="olist arabic">
 <ol class="arabic">
@@ -421,7 +409,7 @@ The figures in this chapter do not list all user-facing OpenStack services just 
 <p>An Administrator configures one or more server flavors, for example "ml.small" and "ml.large", and sets attributes to link these server flavors to the "gpu" host aggregate;</p>
 </li>
 <li>
-<p>An Operator creates a server instance and specifies ether the "ml.small" or "ml.large" server flavor for the instance.</p>
+<p>An Operator creates a server instance and specifies either the "ml.small" or "ml.large" server flavor for the instance.</p>
 </li>
 </ol>
 </div>
@@ -435,7 +423,7 @@ The figures in this chapter do not list all user-facing OpenStack services just 
 <p>OpenStack cluster cells are even less visible to OpenStack Operators than Host Aggregates. They relate to the reliability and scalability of an OpenStack control plane itself, instead of to workloads, but compute nodes must belong to one and only one cell, which makes this concept somewhat close to AZs.</p>
 </div>
 <div class="paragraph">
-<p>The following figures show three typical ways of configuring cells in an OpenStack cluster: first, configuring an 1:1 equivalence of AZs and cells:</p>
+<p>The following figures show three typical ways of configuring cells in an OpenStack cluster: first, configuring a 1:1 equivalence of AZs and cells:</p>
 </div>
 <div class="imageblock">
 <div class="content">
