--- a/rhoso-intro/1/ch3-multitenancy/s5-cluster-demo.html
+++ b/rhoso-intro/1/ch3-multitenancy/s5-cluster-demo.html
@@ -256,18 +256,6 @@
 </dd>
 </dl>
 </div>
-<div class="admonitionblock warning">
-<table>
-<tr>
-<td class="icon">
-<i class="fa icon-warning" title="Warning"></i>
-</td>
-<td class="content">
-Work In Progress
-</td>
-</tr>
-</table>
-</div>
 </div>
 </div>
 <div class="sect1">
@@ -282,7 +270,7 @@ Work In Progress
 <h2 id="_environment"><a class="anchor" href="#_environment"></a>Environment</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>There is no demo environment for now. Presenters must be able to provide their own environment, which would ideally be a larger OpenStack cluster than previous demos. Besides domains, projects, server flavors, floating ips, tenant networks, and predeployed worloads, it requires multiple AZs and host aggregates, thus a larger number of compute nodes. No need to provide multiple regions and additional cells beyond cell0 and cell1, but if such an environment is available for recording the video, it would be even beter.</p>
+<p>There is no demo environment for now. Presenters must be able to provide their own environment, which would ideally be a larger OpenStack cluster than previous demos. Besides domains, projects, server flavors, floating IPs, tenant networks, and pre-deploy workloads, it requires multiple AZs and host aggregates, thus a larger number of compute nodes. No need to provide multiple regions and additional cells beyond cell0 and cell1, but if such an environment is available for recording the video, it would be even better.</p>
 </div>
 <div class="paragraph">
 <p>The demo environment must also provide a user workstation preconfigured with the OpenStack client and a web browser to access the Horizon dashboard.</p>
