--- a/rhoso-intro/1/ch3-multitenancy/s7-summary.html
+++ b/rhoso-intro/1/ch3-multitenancy/s7-summary.html
@@ -266,13 +266,13 @@
 <p>OpenStack clusters can be grouped, each as a region, in a larger private cloud.</p>
 </li>
 <li>
-<p>OpenStack clusters can be partitioned into availability zones (AZs) to manage reliability and resilience of workloads from infrastructure issues.</p>
+<p>OpenStack clusters can be partitioned into availability zones (AZs) to manage the reliability and resilience of workloads from infrastructure issues.</p>
 </li>
 <li>
 <p>OpenStack compute nodes can be members of multiple host aggregates to schedule workloads to physical servers having better performance or cost for each workload.</p>
 </li>
 <li>
-<p>OpenStack compute nodes can also be partitioned in cells, independent of AZs and host aggregates, to manage scalability and resilience of OpenStack services themselves.</p>
+<p>OpenStack compute nodes can also be partitioned in cells, independent of AZs and host aggregates, to manage the scalability and resilience of OpenStack services themselves.</p>
 </li>
 </ul>
 </div>
